# portfolio-risk-mgmt

./: main.py  pyproject.toml  requirements.uv
DFA-and-factor-investing/: DFA-Case.ipynb
GMO-and-forecasting/: HW7.ipynb  Homework7.ipynb
barnstable-case-study/: Barnstable-and-Long-Run-Risk.ipynb
data/: barnstable_analysis_data.xlsx  proshares_analysis_data.xlsx  spx_returns_weekly.xlsx  ~$barnstable_analysis_data.xlsx
hw1/: HarvardsEndowment.ipynb
hw2/: ConstrainedOptimization.ipynb  ProSharesReplication.ipynb  UnconstrainedOptimization.ipynb  hw2 - gonzalo.ipynb  hw2_part1_Hsiao-Chi Chen.ipynb
hw3/: Barnstable-and-Long-Run-Risk - Gonzalo.ipynb  Barnstable-and-Long-Run-Risk.ipynb  Exercise_w3.ipynb  VaR-of-Equity-Portfolio - gonzalo.ipynb  VaR-of-Equity-Portfolio.ipynb
hw5/: Smart-Beta-and-Factor-Investing.ipynb
hw6/: AQR-Momentum-Strategies.ipynb
hw7/: GMO-Forecasting.ipynb  Homework7.ipynb
hw8/: Forecasting-with-Fundamentals.ipynb  Homework8.ipynb
pro-shares-replication/: ProSharesReplication.ipynb
